<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wlkata_mirobot_description</name>
  <version>0.1.0</version>
  <description>jixiebi</description>
  <maintainer email="136645224gg@gamil.com">cxy</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>